# factible

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: EVALUATION.md  pyproject.toml
backend/experiments/: cli.py  experiments_config.yaml  run_experiments.py
backend/experiments/commands/: evaluate.py  precision_recall.py  run.py
backend/experiments/data/ground_truth/: -LDjqcvSbP4.yaml  7bMfGXPRIig.yaml  BADDj82oces.yaml  BHY0FxzoKZE.yaml  BJWq1FeGpCw.yaml  BiulFh5uAyM.yaml  EKxxTfZveUw.yaml  EbkLW_-m938.yaml  G4H1N_yXBiA.yaml  HQ-Kg_xgdhE.yaml  KdMqCUa7XJk.yaml  OMBxolu127k.yaml  OwqIy8Ikv-c.yaml  P19ywkobLX8.yaml  QcDrE5YvqTs.yaml  RegC520C6ec_.yaml  SYS2_ECsaxY.yaml  W97evNJrMn8.yaml  WJhCa12UTsg.yaml  YfWCUYX2_U0.yaml  _6xlNyWPpB8.yaml  cWsWg9RcgzE.yaml  cy_k-1JdIAU.yaml  eeISzbk9SeE.yaml  oFmGG3k8naQ.yaml  oTFt4byuIuo.yaml  oYvKcAh1zdo.yaml  rBUjOY12gJA_.yaml  rIcXeueo0O8.yaml  sO6Po_RItl8.yaml
backend/experiments/evaluator/: claim_matching.py  create_precision_recall_curve.py  evaluator.py  ground_truth.py  models.py  run_evaluator.py
backend/experiments/evaluator/llm_judge/: base.py  claim_quality.py  evidence_relevance.py  explanation_quality.py  query_relevance.py
backend/experiments/evaluator/metrics/: claim_extraction.py  end_to_end.py  evidence_search.py  query_generation.py  verdict.py
backend/factible/: run.py
backend/factible/agents/: run.py
backend/factible/agents/transcript/: youtube_transcript.py
backend/factible/components/claim_extractor/: claim_extractor.py  extractor.py  schemas.py
backend/factible/components/online_search/: search.py
backend/factible/evaluation/: EVALUATION.md  pydantic_monitor.py  tracker.py
backend/factible/experiments/: analyze.py  cli.py  experiments_config.yaml  phase1_visualizations.py  run_evaluator.py  run_experiments.py  run_phase1_experiments.sh
backend/factible/models/: config.py  llm.py
backend/factible/tracking/: pydantic_monitor.py  tracker.py
backend/factible/utils/: profile.py
backend/factible_api/: .gitignore  README.md  main.py  pyproject.toml  test_api.py
backend/factible_api/core/: config.py
backend/scripts/: README.md
backend/scripts/experiments/: experiments_config.yaml  run_experiments.py
(+1033 files in other folders)
